# hackeriot_board

./: .gitignore  README.md
hardware/: HARDWARE.md
hardware/hackeriot_board/: hackeriot_board.kicad_pcb  hackeriot_board.kicad_pro  hackeriot_board.kicad_sch
hardware/hackeriot_board_2024/: HARDWARE.md  hackeriot_board_2024.kicad_pcb
hardware/hackeriot_board_2025/: HARDWARE.md  fp-lib-table  led_matrix.kicad_sch
hardware/hackeriot_board_2025/hackeriot_board_2025/: hackeriot_2025.kicad_sym  hackeriot_board_2025.kicad_pcb  hackeriot_board_2025.kicad_pro  hackeriot_board_2025.kicad_sch  hackeriot_board_2025.kicad_sym  sym-lib-table
hardware/hackeriot_board_2025/hackeriot_board_2025.3dshapes/: SSOP-8_L2.0-W2.3-P0.50-LS3.1-BR.wrl
hardware/hackeriot_board_2025/hackeriot_board_2025.pretty/: SW-SMD_4P-L6.0-W6.0-P4.50-LS9.0-2.kicad_mod  Tooling Hole.kicad_mod
hardware/hackeriot_board_2025/hackeriot_board_2025/hackeriot_board_2025.3dshapes/: SOP-28_L17.9-W7.5-P1.27-LS10.3-BL.wrl  SW-SMD_4P-L6.0-W6.0-P4.50-LS11.0.wrl
software/firmware/hackeriot_board_2024_firmware/: hackeriot_board_2024_firmware.ino
software/firmware/hackeriot_board_2025_firmware/: .gitignore
software/firmware/hackeriot_board_2025_firmware/.west/: config
software/firmware/hackeriot_board_2025_firmware/hackeriot_firmware/: CMakeLists.txt
software/firmware/hackeriot_board_2025_firmware/hackeriot_firmware/src/: buttons.c  buttons.h  kc.c  kc.h  led.c  led.h  main.c  maze.c  maze.h  persist.c  persist.h  screen.c  screen.h  simon.c  simon.h  snake.c  snake.h
(+29 files in other folders)
